--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
             <div class="destination" id="florida">
                 <h2>Florida</h2>
             </div>
-
+h2 {
+    margin: 0;
+    transform: rotate(-45deg);
+    transition: transform 0.5s;
+    text-shadow: 0 0 5px #01579b;
+}
             <div class="destination" id="paris">
                 <h2>Paris</h2>
             </div>
